Creating reminders configuation list completely. In progress upgrading Customer Care (allow users config time to receive reminder notification).

--- a/web/src/main/webapp/WEB-INF/templates/homepage.html
+++ b/web/src/main/webapp/WEB-INF/templates/homepage.html
@@ -136,8 +136,8 @@
 	</button>
 
 	<!-- CHAT ASSISTANT -->
-	<th:block th:if=${#request.userPrincipal}>
-		<th:block th:include="fragments/chat/frg_chatAssistant"></th:block>
+	<th:block th:if="${#request.userPrincipal != null and toggleCCEnabled}">
+   		<th:block th:include="fragments/chat/frg_chatAssistant"></th:block>
 	</th:block>
 
 	<!-- Footer Section -->
