Update: Upload files/images for each interaction (not complete yet).

--- a/web/src/main/webapp/WEB-INF/templates/customerInteractionDetail.html
+++ b/web/src/main/webapp/WEB-INF/templates/customerInteractionDetail.html
@@ -27,11 +27,8 @@
 <!-- End include Handsontable -->
 
 </head>
-<body
-	class="vertical-layout vertical-compact-menu 2-columns menu-expanded fixed-navbar"
-	data-open="click" data-menu="vertical-compact-menu"
-	data-col="2-columns">
-	>
+<body>
+	
 	<!-- BEGIN HEADER -->
 	<th:block th:include="fragments/hmenu"></th:block>
 	<!-- END HEADER -->
