--- a/web/src/main/webapp/resources/css/interaction.css
+++ b/web/src/main/webapp/resources/css/interaction.css
@@ -41,3 +41,17 @@ button {
     font-size: 16px;
     text-align: center;
 }
+
+.htCustomUpload {
+	display: inline-block;
+	padding: 5px 10px;
+	background-color: #3498db;
+	color: white;
+	border-radius: 4px;
+	cursor: pointer;
+	font-size: 13px;
+}
+
+.htCustomUpload:hover {
+	background-color: #2980b9;
+}
