--- a/web/src/main/webapp/WEB-INF/templates/fragments/frg_CustomerDetail.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/frg_CustomerDetail.html
@@ -68,7 +68,7 @@
 
 		</div>
 	</div>
-	<!-- <input type="file" name="attachments" id="fileUploader" style="display: none;" /> -->
+<!-- 	<input type="file" id="htFileInput" multiple /> -->
 	
 	<th:block th:include="fragments/frg_ModalConfirmation"></th:block>
 	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/deleteCustomer.js}" defer></script>
