--- a/web/src/main/webapp/WEB-INF/templates/fragments/chat/frg_chatAssistant.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/chat/frg_chatAssistant.html
@@ -94,8 +94,7 @@
 								<div class="table-responsive" style = "width: 100%">
 									<th:block th:include="fragments/chat/frg_datatable"></th:block>
 								</div>
-								
-s							</div>
+							</div>
 						</div>
 					</div>
 				</div>
