--- a/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
@@ -31,6 +31,7 @@
                 	<li class="active" data-menu=""><a class="dropdown-item" th:href="@{/contact}" data-toggle="dropdown">Liên hệ</a></li>
                 	<li class="active" data-menu=""><a class="dropdown-item" th:href="@{/feature-introduction}" data-toggle="dropdown">Đặc trưng</a></li>
                 	<li class="active" data-menu=""><a class="dropdown-item" th:href="@{/feedback}" data-toggle="dropdown">Phản hồi</a></li>
+                	<li class="active" data-menu=""><a class="dropdown-item" th:unless="${#request.userPrincipal}" th:href="@{/trial-registration}" data-toggle="dropdown">Đăng ký dùng thử</a></li>
                 </ul>
            	</li>
             
@@ -125,12 +126,12 @@
 			        </li>
 			   </li>
 			   
-			    <li class="dropdown nav-item" data-menu="dropdown" data-step="7" data-intro="Đăng ký tài khoản">
-			        <a th:unless="${#request.userPrincipal}" th:href="${session.loginUrl}" class="dropdown-toggle nav-link" data-i18n="nav.templates.main">
-				        <i class="icon-pencil"></i>
-				        <span data-i18n="nav.templates.main">Đăng ký</span>
-				    </a>
-				</li>
+<!-- 			    <li class="dropdown nav-item" data-menu="dropdown" data-step="7" data-intro="Đăng ký tài khoản"> -->
+<!-- 			        <a th:unless="${#request.userPrincipal}" th:href="${session.loginUrl}" class="dropdown-toggle nav-link" data-i18n="nav.templates.main"> -->
+<!-- 				        <i class="icon-pencil"></i> -->
+<!-- 				        <span data-i18n="nav.templates.main">Đăng ký</span> -->
+<!-- 				    </a> -->
+<!-- 				</li> -->
 
 			
 <!-- 			        Kiểm tra nếu chưa đăng nhập -->
