--- a/web/src/main/webapp/WEB-INF/templates/fragments/statusOfCustomer.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/statusOfCustomer.html
@@ -19,7 +19,7 @@
 			</button>
 			<div class="scroll-images">
 				<div th:each="status: ${statuses}" class="child"
-					 th:style="'background-color:' + ${status.backgroundColor}"
+					 th:style="'background-color:' + ${!#strings.isEmpty(status.backgroundColor) ? status.backgroundColor : '#346beb'}"
 					 th:onclick="'fetchCustomersByStatus(' + ${status.id} + ')'"
 					 th:attr="data-status-id=${status.id}">
 					<h4 th:text="${status.name}"></h4>
