--- a/web/src/main/webapp/WEB-INF/templates/fragments/chat/frg_chatAssistant.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/chat/frg_chatAssistant.html
@@ -119,7 +119,7 @@
 	        <h5 class="modal-title" id="customerDetailModalLabel_CustomerCare" style="color: white !important">Thông tin khách hàng</h5>
 	        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Đóng"></button>
 	      </div>
-	      <div class="modal-body" id="modalCustomerDetailBody_CustomerCare">
+	      <div class="modal-body text-start" id="modalCustomerDetailBody_CustomerCare">
 	        <!-- Nội dung sẽ được load động tại đây -->
 	      </div>
 	    </div>
