Fix bugs successfully.

--- a/web/src/main/webapp/WEB-INF/templates/fragments/chat/frg_datatable.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/chat/frg_datatable.html
@@ -12,7 +12,8 @@
 			<th>Hành động</th>
 			<th>Tên công ty</th>
 			<th>Người liên hệ</th>
-			<th>Trạng thái chính</th>
+			<th>Trạng thái chính trước đó</th>
+			<th>Trạng thái chính hiện tại</th>
 			<th>Chi tiết tương tác</th>
 			<th>Độ ưu tiên</th>
 			<th>Tình trạng chăm sóc</th>
